@@ -2,8 +2,7 @@
   <metal:block fill-slot="main"
                tal:define="wiki here/getParent;
                            parser_type wiki/parser;
-                           source here/content;
-                           source python:source[0]">
+                           source here/getSource;">
     <tal:block tal:define="locked python:here.lockPage(request)">
         <tal:block tal:condition="not:locked">
             <div class="message" i18n:translate="">
