@@ -1,0 +1,21 @@
+<h1 tal:replace="structure here/manage_page_header">Header</h1>
+<h2 tal:replace="structure here/manage_tabs">Tabs</h2>
+
+<h3 tal:define="form_title string:Edit Wiki Page"
+    tal:replace="structure here/manage_form_title">Form Title</h3>
+
+<p class="form-help">
+Edit this content
+</p>
+
+<form action="manage_editPage" method="post">
+<textarea name="source"
+    style="width: 100%;" cols="50" rows="30"
+    tal:content="python:here.getSource()"></textarea>
+<p>
+  <input type="submit"  value="Modify" />
+</p>
+</form>
+
+
+<h1 tal:replace="structure here/manage_page_footer">Footer</h1>
